# osm_batching_tool

./: .gitignore  Cargo.toml  Dockerfile  README.md  SUMMARY.md  build.rs  docker-compose.yml
.cursor/rules/: code-style.mdc  data-processing.mdc  project-context.mdc
proto/: osm_import.proto
src/: lib.rs  main.rs  osm_processor.rs  utils.rs
