[package]
name = "osm-import-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quick-xml = "0.38"
reqwest = { version = "0.12", features = ["stream"] }
flate2 = "1.1"
regex = "1.11"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

[build-dependencies]
tonic-prost-build = "0.14"
